--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Contact</a>
+      <a href="#portfolio">Projects</a>
+      <!-- <a href="#contact">Contact</a> -->
 
     </nav>
   </header>
@@ -67,7 +67,7 @@
       <h2 class="heading">About <span>Me</span></h2>
       <h3>Frontend Developer</h3>
       <p>I'm a dedicated frontend developer with a strong grasp of HTML, CSS, and JS, driven by a passion for crafting compelling web applications. Committed to excellence, I thrive on collaboration and welcome opportunities to create innovative digital solutions that leave a lasting impression.</p>
-      <a href="" class="btn">Read More</a>
+      <!-- <a href="" class="btn">Read More</a> -->
     </div>
   </section>
 
@@ -82,21 +82,21 @@
         <i class="bx bx-code-curly"></i>
         <h3>Web Development</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
-        <a href="#" class="btn">Read More</a>
+        <!-- <a href="#" class="btn">Read More</a> -->
       </div>
       
       <div class="services-box">
         <i class="bx bxs-paint"></i>
         <h3>UI/UX Design</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
-        <a href="#" class="btn">Read More</a>
+        <!-- <a href="#" class="btn">Read More</a> -->
       </div>
   
       <div class="services-box">
         <i class="bx bxs-bar-chart-alt-2"></i>
         <h3>App Development</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
-        <a href="#" class="btn">Read More</a>
+        <!-- <a href="#" class="btn">Read More</a> -->
       </div>
     </div>
   </section>
@@ -169,7 +169,7 @@
 
   <!-- contact section design -->
 
-  <section class="contact" id="contact">
+  <!-- <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me!</span></h2>
 
     <form action="#">
@@ -184,7 +184,7 @@
       <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
       <input type="submit" value="Send Message" class="btn">
     </form>
-  </section>
+  </section> -->
 
 
   <!-- footer design -->
