--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- portfolio section design -->
   <section class="portfolio" id="portfolio">
-    <h2 class="heading">Latest <span>Project</span></h2>
+    <h2 class="heading">Latest <span>Projects</span></h2>
 
     <div class="portfolio-container">
       <div class="portfolio-box">
@@ -167,26 +167,7 @@
 
   </section>
 
-  <!-- contact section design -->
-
-  <!-- <section class="contact" id="contact">
-    <h2 class="heading">Contact <span>Me!</span></h2>
-
-    <form action="#">
-      <div class="input-box">
-        <input type="text" placeholder="Full Name">
-        <input type="text" placeholder="Email Address">
-      </div>
-      <div class="input-box">
-        <input type="number" placeholder="Mobile Number">
-        <input type="text" placeholder="Email Subject">
-      </div>
-      <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-      <input type="submit" value="Send Message" class="btn">
-    </form>
-  </section> -->
-
-
+  
   <!-- footer design -->
 
   <footer class="footer">
