--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
       <div class="services-box">
         <i class="bx bx-code-curly"></i>
         <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+        <p>Crafting Stunning Websites: Transforming Ideas into Interactive, Responsive, and User-Friendly Web Experiences.</p>
         <!-- <a href="#" class="btn">Read More</a> -->
       </div>
       
       <div class="services-box">
         <i class="bx bxs-paint"></i>
         <h3>UI/UX Design</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+        <p>Elevate user experiences with UI/UX design expertise. I craft visually appealing and user-friendly websites to leave a lasting impression.</p>
         <!-- <a href="#" class="btn">Read More</a> -->
       </div>
   
       <div class="services-box">
         <i class="bx bxs-bar-chart-alt-2"></i>
         <h3>App Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+        <p>Elevate your digital presence with the app development expertise. I craft intuitive mobile solutions, bringing your ideas to life with cutting-edge technology.</p>
         <!-- <a href="#" class="btn">Read More</a> -->
       </div>
     </div>
@@ -128,7 +128,7 @@
       </div>
 
       <div class="portfolio-box">
-        <img src="images/weather.png" alt="">
+        <img src="images/weather.png" style="width: 100%; height: 190px;" alt="">
         <div class="portfolio-layer">
           <h4>weather App</h4>
           <p>Experience weather magic: Real-time forecasts at your fingertips, wherever you are.</p>
@@ -167,7 +167,7 @@
 
   </section>
 
-  
+
   <!-- footer design -->
 
   <footer class="footer">
