--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="https://www.linkedin.com/in/ajay-kumar-65712923a/"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ajayku267"><i class="bx bxl-github"></i></a>
       </div>
-      <a href="#" class="btn">Download CV</a>
+      <a href="https://drive.google.com/file/d/1TH3KTYOcEHH78VpUhiNaj1PVGiIdSgXW/view?usp=sharing" class="btn">Open CV</a>
     </div>
 
     <div class="home-img">
